--- a/Hello_Colab.ipynb
+++ b/Hello_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrbqAXj2xXaTq3TDyNHIBD",
+      "authorship_tag": "ABX9TyMwn8KqbMKb5vXERt0qmpxm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,19 +34,77 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzVE9b82mI82",
-        "outputId": "3a698b51-aa84-42be-e1d9-42906834b466"
+        "outputId": "5b71cfad-6714-4fb9-f694-760cd766375e"
       },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "IOPub data rate exceeded.\n",
+            "The notebook server will temporarily stop sending output\n",
+            "to the client in order to avoid crashing it.\n",
+            "To change this limit, set the config variable\n",
+            "`--NotebookApp.iopub_data_rate_limit`.\n",
+            "\n",
+            "Current values:\n",
+            "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+            "NotebookApp.rate_limit_window=3.0 (secs)\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "# 利用 requests 對 API 來源發送一個請求\n",
+        "url = 'https://raw.githubusercontent.com/kiang/pharmacies/master/json/points.json'\n",
+        "res = requests.get(url)\n",
+        "\n",
+        "# 將請求回應的內容存成一個字串格式\n",
+        "d = res.text\n",
+        "\n",
+        "# 將長得像 json 格式的字串解析成字典或列表\n",
+        "data = json.loads(d)\n",
+        "\n",
+        "print(data)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 填入欄位名稱\n",
+        "med_count = {}\n",
+        "for d in data['features']:\n",
+        "    county = d['properties']['county']\n",
+        "    if county == \"\":\n",
+        "      county = d['properties']['address'][:3]\n",
+        "    if county not in med_count:\n",
+        "         med_count[county] = 1\n",
+        "    else:\n",
+        "      med_count[county] += 1\n",
+        "\n",
+        "\n",
+        "print(med_count)\n",
+        "# {'台北市': 123, '新北市': 456 ...}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oySbYx1Bmz7-",
+        "outputId": "b16e9348-e8e5-45d1-bf6f-19cfaf6477f3"
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello world\n"
+            "{'臺北市': 340, '高雄市': 424, '臺中市': 436, '臺南市': 280, '基隆市': 57, '新竹市': 39, '嘉義市': 67, '新北市': 507, '桃園市': 271, '新竹縣': 48, '宜蘭縣': 76, '苗栗縣': 57, '彰化縣': 181, '南投縣': 67, '雲林縣': 131, '嘉義縣': 84, '屏東縣': 140, '澎湖縣': 11, '花蓮縣': 47, '臺東縣': 23, '金門縣': 6, '連江縣': 1}\n"
           ]
         }
-      ],
-      "source": [
-        "print(\"Hello world\")"
       ]
     }
   ]
